--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   file_picker: ^5.3.3
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
