--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   file_picker: ^5.3.3
   webview_flutter: ^4.2.2
